<resources>
    <string name="app_name">MindMap</string>

    <string name="welcome">Welcome to the MindMap Application</string>
    <string name="enter">ENTER</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="inputData">ADD THE FIELDS</string>

    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>

    <string name="hint_description">Description</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_about">AboutActivity</string>

    <string name="title_activity_maplist">MapListActivity</string>

    <string name="title_activity_mindmap">MindMapActivity</string>

    <string name="creator">Creators</string>
    <string name="copyright">Keep Solid Production</string>

    <string name="register">REGISTER</string>

    <string name="invalid_combination">Sorry, but name/password combination is invalid!</string>
    <string name="name_and_password_saved">Your name and password were saved!</string>

    <string name="add_new_map">ADD NEW MAP</string>
    <string name="add_new_group">ADD NEW GROUP</string>

    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>

    <string name="name">Name</string>

    <string name="recycler_name">NAME:</string>
    <string name="recycler_binds">BINDS:</string>

    <string name="new_map_template">NEW MIND MAP</string>
    <string name="new_group_template">NEW GROUP</string>

    <string name="group_all">ALL</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_graph">GraphActivity</string>

    <string name="open_drawer">Open Drawer</string>

    <string name="close_drawer">Close Drawer</string>
</resources>
