<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/LayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/layout_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/entrance_tv_inputData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/inputData" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/entrance_til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/entrance_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_big_margin"
            />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/entrance_til_password"
            android:layout_below="@+id/entrance_til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/entrance_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:layout_marginTop="@dimen/view_mini_margin"
            />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/entrance_ll"
            android:orientation="vertical"
            android:layout_below="@+id/entrance_til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_big_margin">

            <Button
                android:id="@+id/entrance_btn_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/entrance_et_name"
                android:text="@string/enter"
                />

            <Button
                android:id="@+id/entrance_btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/entrance_et_name"
                android:text="@string/register"
                android:layout_marginTop="@dimen/view_middle_margin"
                />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
